# fty-security-wallet

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile.am  README.md  acinclude.m4  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  fty-security-wallet.conf  install.xml  license.xml  project.xml
agent/: CMakeLists.txt
agent/src/: fty_security_wallet.cc
builds/check_zproject/: ci_build.sh
builds/cmake/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  fty-security-wallet.adoc
include/: Makefile.am  cam_accessor.h  cam_credential_asset_mapping.h  cam_exception.h  fty_credential_asset_mapping_mlm_agent.h  fty_credential_asset_mapping_server.h  fty_security_wallet.h  fty_security_wallet_library.h  fty_security_wallet_mlm_agent.h  fty_security_wallet_server.h  fty_security_wallet_socket_agent.h  secw_client_accessor.h  secw_consumer_accessor.h  secw_document.h  secw_exception.h  secw_external_certificate.h  secw_internal_certificate.h  secw_producer_accessor.h  secw_security_wallet_server.h  secw_snmpv1.h  secw_snmpv3.h  secw_tag_description.h  secw_user_and_password.h
lib/: CMakeLists.txt
lib/include/: cam_accessor.h  cam_credential_asset_mapping.h  cam_exception.h  fty_credential_asset_mapping_mlm_agent.h  fty_security_wallet.h  fty_security_wallet_library.h  fty_security_wallet_socket_agent.h  secw_client_accessor.h  secw_consumer_accessor.h  secw_document.h  secw_exception.h  secw_external_certificate.h  secw_internal_certificate.h  secw_login_and_token.h  secw_portfolio.h  secw_producer_accessor.h  secw_security_wallet.h  secw_security_wallet_server.h  secw_snmpv1.h  secw_snmpv3.h  secw_sshkey_and_login.h  secw_token_and_login.h  secw_user_and_password.h
lib/src/: cam_accessor.cc  cam_accessor.h  cam_credential_asset_mapping.cc  cam_credential_asset_mapping.h  cam_credential_asset_mapping_server.cc  cam_credential_asset_mapping_server.h  cam_credential_asset_mapping_storage.cc  cam_credential_asset_mapping_storage.h  cam_exception.cc  cam_helpers.cc  cam_helpers.h  fty_credential_asset_mapping_mlm_agent.cc  fty_security_wallet_classes.h  fty_security_wallet_mlm_agent.cc  fty_security_wallet_mlm_agent.h  fty_security_wallet_socket_agent.cc  secw_client_accessor.cc  secw_configuration.cc  secw_configuration.h  secw_consumer_accessor.cc  secw_consumer_accessor.h  secw_document.cc  secw_document.h  secw_exception.cc  secw_external_certificate.cc  secw_external_certificate.h  secw_helpers.cc  secw_helpers.h  secw_internal_certificate.cc  secw_login_and_token.cc  secw_openssl_wrapper.cc  secw_openssl_wrapper.h  secw_portfolio.cc  secw_portfolio.h  secw_producer_accessor.cc  secw_security_wallet.cc  secw_security_wallet_server.cc  secw_security_wallet_server.h  secw_snmpv1.cc  secw_snmpv3.cc  (+4 more)
lib/tests/: asset_mapping_mlm_agent.cpp  cam_accessor.cpp  cam_accessor.h  consumer_accessor.cpp  consumer_accessor.h  fty_security_wallet_selftest.cc  main.cc  producer_accessor.cpp  producer_accessor.h  socket_agent.cpp  wallet_mlm_agent.cpp
lib/tests/selftest-ro/: configuration.json  data.json  mapping.json
packaging/debian/: changelog  control  copyright  fty-security-wallet.dsc.obs  fty-security-wallet.install  fty-security-wallet.manpages  libfty-security-wallet-dev.install  libfty-security-wallet1.install  libfty-security-wallet1.links  rules
packaging/redhat/: fty-security-wallet.spec
resources/: 30-secw-update-database-right.sh  30-secw-update-database-right.sh.in  configuration.json  fty-security-wallet.cfg.in  fty-security-wallet.conf.in  fty-security-wallet.service.in  secw-update-mapping-2.6.py
src/: .gitignore  30-secw-update-database-right.sh  Makemodule-local.am  Makemodule.am  access.json  cam_accessor.cc  cam_credential_asset_mapping.cc  cam_credential_asset_mapping_server.cc  cam_credential_asset_mapping_server.h  cam_credential_asset_mapping_storage.cc  cam_credential_asset_mapping_storage.h  cam_exception.cc  cam_helpers.cc  cam_helpers.h  configuration.json  fty-security-wallet.cfg.in  fty-security-wallet.conf  fty-security-wallet.service.in  fty_actor.cc  fty_actor.h  fty_credential_asset_mapping_mlm_agent.cc  fty_credential_asset_mapping_server.cc  fty_security_wallet.cc  fty_security_wallet_classes.h  fty_security_wallet_mlm_agent.cc  fty_security_wallet_private_selftest.cc  fty_security_wallet_selftest.cc  fty_security_wallet_server.cc  fty_security_wallet_socket_agent.cc  libfty_security_wallet.pc.in  secw_access.cc  secw_access.h  secw_client_accessor.cc  secw_client_accessor.h  secw_configuration.cc  secw_configuration.h  secw_consumer_accessor.cc  secw_document.cc  secw_document.h  secw_exception.cc  (+19 more)
src/selftest-ro/: access.json  configuration.json  data.json  mapping.json
zproject-hold/: acinclude.m4  install.xml
